# Brion

./: .clang-format  .gitexternals  .gitignore  .gitmodules  .gitsubprojects  .travis.yml  AUTHORS.txt  CMakeLists.txt  MANIFEST.in  README.md  setup.py
CMake/: ChoosePython.cmake  CompileOptions.cmake  DocBuild.cmake  Doxyfile.in  FindNumPy.cmake
apps/: CMakeLists.txt  compartmentConverter.cpp  morphologyConverter.cpp  morphologyServer.cpp  spikeConverter.cpp
brain/: CMakeLists.txt  api.h  brain.h  circuit.cpp  circuit.h  compartmentReport.cpp  compartmentReport.h  compartmentReportReader.cpp  compartmentReportReader.h  compartmentReportView.cpp  compartmentReportView.h  log.h  simulation.cpp  simulation.h  spikeReportReader.cpp  spikeReportReader.h  synapse.cpp  synapse.h  synapses.cpp  synapses.h  synapsesIterator.cpp  synapsesIterator.h  types.h  version.cpp  version.h.in
brain/detail/: circuit.h  compartmentReport.h  simulation.h  synapsesStream.h  targets.h  util.h
brain/neuron/: morphology.cpp  morphology.h  morphologyImpl.cpp  morphologyImpl.h  section.cpp  section.h  soma.cpp  soma.h  types.h
brain/python/: CMakeLists.txt  arrayHelpers.cpp  arrayHelpers.h  arrayHelpers.inc  brain.cpp  circuit.cpp  compartmentReport.cpp  default_docstrings.cpp  helpers.cpp  helpers.h  pythonDocumentation.h  simulation.cpp  spikeReportReader.cpp  spikeReportWriter.cpp  submodules.cpp  synapses.cpp  types.h
brain/python/Brion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
brain/python/brain/: __init__.py
brain/python/brion/: __init__.py  __init__.py.in
brain/python/brion/neuron/: __init__.py
brain/python/neuron/: morphology.cpp
brion/: CMakeLists.txt  api.h  blueConfig.cpp  blueConfig.h  brion.h  circuit.cpp  circuitConfig.cpp  circuitConfig.h  compartmentReport.cpp  compartmentReport.h  compartmentReportPlugin.h  constants.h  csvConfig.cpp  csvConfig.h  enums.h  json.hpp  log.h  mesh.cpp  morphology.cpp  morphology.h  morphologyPlugin.h  morphologyPlugin.ipp  nodeGroup.cpp  nodeGroup.h  nodes.cpp  nodes.h  pluginInitData.h  pluginLibrary.h  serializable.cpp  serializable.h  simulationConfig.cpp  simulationConfig.h  spikeReport.cpp  spikeReport.h  spikeReportPlugin.h  synapse.cpp  synapseSummary.cpp  target.cpp  threadPool.cpp  threadPool.h  (+7 more)
brion/detail/: hdf5Mutex.h  json.hpp  meshBinary.h  meshHDF5.h  serializableMorphology.h  serializableMorphology.ipp  utils.cpp  utils.h  utilsHDF5.cpp  utilsHDF5.h
brion/plugin/: CMakeLists.txt  compartmentReportBinary.cpp  compartmentReportBinary.h  compartmentReportCommon.cpp  compartmentReportCommon.h  compartmentReportDummy.cpp  compartmentReportDummy.h  compartmentReportHDF5.cpp  compartmentReportHDF5.h  compartmentReportHDF5Sonata.cpp  compartmentReportHDF5Sonata.h  compartmentReportLegacyHDF5.cpp  compartmentReportLegacyHDF5.h  compartmentReportMap.cpp  compartmentReportMap.h  compartmentReportNull.h  morphologyHDF5.cpp  morphologyHDF5.h  morphologyMORPHIO.cpp  morphologyMORPHIO.h  morphologySWC.cpp  morphologySWC.h  morphologyZeroEQ.cpp  morphologyZeroEQ.h  spikeReportASCII.cpp  spikeReportASCII.h  spikeReportBinary.cpp  spikeReportBinary.h  spikeReportBluron.cpp  spikeReportBluron.h  spikeReportHDF.cpp  spikeReportHDF.h  spikeReportHDF5.cpp  spikeReportHDF5.h  spikeReportHDF5Sonata.cpp  spikeReportHDF5Sonata.h  spikeReportNEST.cpp  spikeReportNEST.h  utilsHDF5.cpp  utilsHDF5.h
doc/: Changelog.md
doc/datamodel/: compartments.md  spikes.md
doc/feature/: rfcs.md  spikeReport.md  synapses.md
doc/python/: CMakeLists.txt
packaging/python_wheel/: docker_build_wheel.sh
packaging/python_wheels/: common.sh
packaging/python_wheels/linux/: Dockerfile  build_docker_image.sh  build_wheel.sh  docker_build_wheel.sh  upload_wheel.sh
packaging/python_wheels/mac/: build.sh
tests/: CMakeLists.txt  blueConfig.cpp  compartmentReport.cpp  mesh.cpp  morphology.cpp  simulationConfig.cpp  sonata.cpp  spikeReport.cpp  synapse.cpp  synapseSummary.cpp  target.cpp  threadHDF5.cpp
tests/brain/: circuit.cpp  compartmentReport.cpp  morphology.cpp  simulation.cpp  sonata.cpp  sonataCircuit.cpp  sonataSimulation.cpp  sonata_circuit.cpp  spikeReportReaderWriter.cpp  synapses.cpp
tests/brain/python/: CMakeLists.txt  circuit.py  compartmentReport.py  morphology.py  simulation.py  smoke.py  spikes.py  synapses.py
tests/data/sonata/: compartment_report.h5  node_types.csv  reports.py  simple_network.json  simple_nodes.h5  simple_nodes.py  simple_spikes.py  simple_spikes_sort_by_gid.h5  simple_spikes_sort_by_time.h5  simple_spikes_sort_none.h5  simulation.json
tests/data/sonata/morphologies/: morph_A.swc
tests/data/sonnet/: node_types.csv
tests/data/spikes/: binary.spikes  generate.py  spikes-0.gdf  spikes-1.gdf  spikes-2.gdf  spikes-3.gdf  spikes-4.gdf  spikes-5.gdf  spikes-6.gdf  spikes-7.gdf  spikes-8.gdf  spikes-9.gdf  spikes_by_gid.h5  spikes_by_time.h5  spikes_unsorted.h5
tests/data/swc/: end_points.swc  first_order_sections.swc  first_order_sections_ring.swc  fork_points.swc  section_order.swc
tests/perf/: circuit.cpp
